--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
+    "connect-mongo": "^2.0.1",
+    "connect-mongodb": "^1.1.5",
     "express": "^4.15.3",
-    "request-promise": "4.2.2",
+    "express-session": "^1.15.6",
     "https": "*",
-    "json5": "*"
+    "json5": "*",
+    "mongoose": "^5.0.14",
+    "node-gyp": "^3.6.2",
+    "request-promise": "4.2.2"
   },
   "devDependencies": {
     "@angular/cli": "^1.7.3",
